--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_database: ^9.1.3
   firebase_core: ^1.22.0
+  flutter_email_sender: ^5.1.0
+  mailto: ^2.0.0
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
