--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_email_sender: ^5.1.0
   mailto: ^2.0.0
   url_launcher: ^6.1.5
+  http: ^0.13.5
+  basic_utils: ^5.2.2
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+
+
+  assets:
+    - lib/img/BackGround.jpg
+    - lib/img/BackGround.2.jpg
+    - lib/img/BackGround3.jpg
+    - lib/img/manara.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
