--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   firebase_database: ^9.1.3
   firebase_core: ^1.22.0
   http: ^0.13.5
-  basic_utils: ^5.2.2
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
